--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /**
  * Base
  */
+ 
+ .para{
+	 color:blue;
+	 
+ }
+ 
  * {
   margin: 0;
   padding: 0;
@@ -8,10 +14,61 @@
   font-family: "Poppins", sans-serif;
 }
 
+.row1{
+	
+	padding:10px;
+	align-items:center;
+	float:left;
+} 	
+.site-logo{
+	float:left;
+	padding:5px;
+	margin-right:80px;
+}
+
+
+.top-bar .tb-contact p {
+	height:10vh;
+	padding:20px;
+    display: inline-block;
+    margin: 0;
+    color: #FF6F61;
+    font-size: 14px;
+}
+
+.top-bar .tb-contact p i {
+    margin-right: 6px;
+}
+
+.text-copy{
+padding: 2px 0;
+    	margin:0;
+	padding:0;
+ 
+}
+.text-copy  h6{
+display: inline-block;
+    margin: 0;
+    	
+}
+.text-copy head-img{
+	float:right;
+		 margin-right: 6px;
+	
+}
+
+
+
+
+header{
+	/*background:linen;*/
+	 background-image:linear-gradient(to right,#FFD194,#D1913C); 
+	height:35vh;
+}
 
 body {
   font-size: 100%;
-  background: #cedce3;  
+  background-image:linear-gradient(to right,#FFD194,#D1913C); 
 }
 
 
@@ -23,8 +80,8 @@ main{
     align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: linear-gradient(to left top, #269604, #ff9664);
- 
+  /*background: linear-gradient(to left top, #269604, #ff9664);*/
+  background-image:linear-gradient(to right,#FFD194,#D1913C); 
 }
 
 
@@ -135,7 +192,8 @@ main{
 
 
 section{
-	background: #cedce3;
+	/*background: linen;*/
+	 background-image:linear-gradient(to right,#FFD194,#D1913C); 
 }
 /* Fallback for hidden attribute */
 hidden {
@@ -184,25 +242,21 @@ hidden {
 /**
  * Slider
  */
- .rt-container h3{
+ .rt-container h4{
 	 position:relative;
-	 left:800px;
+	 left:10px;
 	 color:blue;
 	 float:right;
-	 padding-right:10px;
+	 padding:10px;
 	 margin:10px;
 	 text-align:center;
  }
  .rt-container p{
-	 padding:10px;
+	 padding:20px;
 	 
 	 margin-bottom:10px;
  }
- .ScriptTop{
-	 background: linear-gradient(to top left,#33ccff 0%,#ff99cc 100%);
-	 
-	
- }
+ 
  .col-rt-2 a{
 	 float: right;
 	 padding-right:10px;
@@ -305,7 +359,8 @@ hidden {
 }
 
 .header{
-	background:#efefef;
+	/*background:#efefef;*/
+	 background-image:linear-gradient(to right,#FFD194,#D1913C); 
 	clear:both;
 	height:75px;
 }
@@ -345,7 +400,8 @@ nav >ul>li>a{
 	float:left;
 }
 .logo{
-	background:#333;
+	/*background:#333;*/
+	 background-image:linear-gradient(to right,#FFD194,#D1913C); 
 	
 }
 /*
@@ -535,8 +591,114 @@ footer{
     }
 }
 .ScriptHeader{
-	background:azure;
+	/*background:azure;*/
+	 background-image:linear-gradient(to right,#FFD194,#D1913C); 
+	margin:0;
+	padding:10px;
+	
 }
+
+#footer{
+	/*background:linen;*/
+	 background-image:linear-gradient(to right,#FFD194,#D1913C); 
+	padding: 30px 50px;
+}
+.subscribe{
+	text-align: center;
+	margin-bottom: 30px;
+}
+.subscribe input{
+	width: 50%;
+	padding: 10px;
+	border: none;
+	background: rgba(0,0,0,0.05);
+	outline: none;
+}
+.subscribe button{
+	padding: 10px;
+	border:none;
+	outline: none;
+	color: white;
+	background:#7f8fa6;  
+}
+
+.footer-row{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.footer-row p{
+	color: grey;
+	margin:10px 0px;
+}
+
+@media (max-width: 770px){
+
+.menu{
+	display: none;
+}
+.left{
+	flex-basis: 100%;
+	margin:50px 100px;
+}
+.right{
+	display: none;
+}
+
+#welcome{
+	width: 120px;
+}
+.btn input{
+	width: 50%;
+}
+
+.featured-left-col{
+	flex-basis: 100%;
+}
+.featured-right-col{
+	flex-basis: 100%;
+}
+
+
+
+.featured2-left-col{
+	flex-basis: 100%;
+}
+.featured2-right-col{
+	flex-basis: 100%;
+}
+.featured2-right-col img{
+	width: 100%;
+}
+.selling-box{
+	flex-basis:100%;
+	text-align: center;
+	margin:10px 0px;
+}
+.offer-left-col{
+	flex-basis: 100%;
+	margin-bottom: 10px;
+
+}
+.offer-right-col{
+	flex-basis: 100%;
+
+}
+.offer-right-col img{
+	width:100%;
+
+}
+
+.blog-box{
+	flex-basis: 100%;
+	margin:10px 0px;
+}
+.footer-row> div{
+	flex-basis: 30%;
+}
+}
+
 
 
 
