--- a/style.css
+++ b/style.css
@@ -16,14 +16,19 @@
 
 .row1{
 	
-	padding:10px;
+	
+	
+	padding:0px;
 	align-items:center;
-	float:left;
+	float:left
+	justify-content:left;
 } 	
 .site-logo{
+	
 	float:left;
-	padding:5px;
-	margin-right:60px;
+	padding:0;
+	margin-right:80px;
+	justify-content:left;
 }
 
 
@@ -254,7 +259,7 @@ hidden {
  .rt-container p{
 	 padding:20px;
 	 
-	 margin-bottom:10px;
+	 margin-bottom:5px;
  }
  
  .col-rt-2 a{
@@ -370,7 +375,7 @@ nav{
 	padding:0;
 	overflow:hidden;
 	text-align:center;
-	float:right;
+	float:center;
 	
 }
 nav ul{
@@ -404,93 +409,6 @@ nav >ul>li>a{
 	 background-image:linear-gradient(to right,#FFD194,#D1913C); 
 	
 }
-/*
-.footer-content{
-	display:flex;
-	align-items:center;
-	flex-direction:column;
-	text-align:center;
-}
-.footer-content h3{
-	font-size:2.1rem;
-	font-weight:500;
-	text-transform:capitalize;
-	line-height:3rem;
-}
-.footer-content p{
-	max-width:500px;
-	margin:10px auto;
-	line-height:28px;
-	font-size:14px;
-	color:#cacdd2;
-}
-.socials{
-	list-style:none;
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	margin: 1rem 0 3rem 0;
-}
-.socials li{
-	margin:0 10px;
-}
-.socials a{
-	text-decoration:none;
-	color:#fff;
-	border:1.1px solid white;
-	padding:5px;
-	border-radius:50%;
-}
-.socials a li{
-	font-size:1.1rem;
-	width:20px;
-	transition:color .4s ease;
-}
-.socials a:hover i{
-	color:aqua;
-}
-.footer-menu{
-	float:right;
-}
-.footer-menu ul{
-	display:flex;
-}
-.footer-content ul li{
-	padding-right: 10px;
-	display: block;
-}
-.footer-menu ul li a:hover{
-	color:#27bcda;
-}
-@media(max-width:500px){
-	.footer-menu ul{
-		display:flex;
-		margin-top:10px;
-		margin-bottom:20px;
-	}
-}
-*{
-	margin:0;
-	padding:0;
-	box-sizing:border-box;
-}
-section{
-	background: linear-gradient(to top left,#33ccff 0%,#ff99cc 100%);
-	<!--background:#fcfcfc;-->
-	font-family:sans-serif;
-}
-footer{
-	position:absolute;
-	bottom:0;
-	left:0;
-	right:0;
-	background:#111;
-	height:auto;
-	width:100vh;
-	padding-top:40px;
-	color:#fff;
-}
-*/
 
 .fa fa-whatsapp{
 	 position:relative;
